--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,18 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>Mentor On Demand</span>
+    <div *ngIf="currentUser && currentUser.role === 'mentor'; else userbar" class="toolbar-mentor">
+        <button mat-stroked-button >Create Course</button>
+
+      </div>
+    <ng-template #userbar>
     <div class="toolbar-search">
+
+        <mat-form-field>
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date of training">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
     <mat-form-field>
         <input matInput placeholder="Find Mentor" type="search">
       </mat-form-field>
@@ -11,12 +22,18 @@
         </button>
 
     </div>
+  </ng-template>
+
 
     <span class="toolbar-spacer"></span>
-    <div class="toolbar-button-row">
+    <div *ngIf="!currentUser; else logout" class="toolbar-button-row">
       <button mat-stroked-button [routerLink]="['/login']">Login</button>
       <button mat-stroked-button [routerLink]="['/signup']">SignUp</button>
     </div>
+    <ng-template #logout>
+      <span class="user-name">{{ currentUser.username }}</span>
+      <button mat-stroked-button (click)="logoutuser()">Logout</button>
+    </ng-template>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
