--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -7,18 +7,27 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
+      <form [formGroup]="loginForm" autocomplete="off" novalidate (ngSubmit)="login(loginForm.value)" fxLayout="column wrap"
+      fxLayoutAlign="center center" fxLayoutGap="10px">
       <div class="login-main-container">
           <h2>Log in Mentor On Demand</h2>
           <mat-form-field>
-            <input matInput placeholder="Enter your email" [formControl]="email" required>
-            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+              <input matInput placeholder="Enter your email" formControlName="email" id="email" required>
+              <mat-error *ngIf="hasError('email', 'required')">You must enter a email</mat-error>
+              <mat-error *ngIf="hasError('email', 'email')">Not a valid email</mat-error>
           </mat-form-field>
           <mat-form-field>
-              <input matInput placeholder="Enter your password" [formControl]="password" required>
-              <mat-error *ngIf="password.invalid">{{getPassWordErrorMessage()}}</mat-error>
+              <input type="password" matInput placeholder="Enter your password" formControlName="password" id="password" required>
+                <mat-error *ngIf="hasError('password', 'required')">
+                    You must enter a password
+                  </mat-error>
+                  <mat-error *ngIf="hasError('password', 'minlength')">
+                      You must enter more than 6 length password
+                    </mat-error>
             </mat-form-field>
-            <button mat-stroked-button color="primary">LOG IN</button>
+            <button [disabled]="loading" [disabled]="!loginForm.valid" mat-stroked-button color="primary">LOG IN</button>
         </div>
+      </form>
         <div class="foot">
             <a href="">Forgot your password?</a>
             <span style="margin-top: 15px;">Don't have an account? <a href="/signup">Sign up</a></span>
