--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row>
     <span>Mentor On Demand</span>
     <div *ngIf="currentUser && currentUser.role === 'mentor'; else userbar" class="toolbar-mentor">
-        <button mat-stroked-button >Create Course</button>
+        <button mat-stroked-button (click)="addCourseDialog()">Create Course</button>
 
       </div>
     <ng-template #userbar>
