--- a/src/app/mentor-list/mentor-list.component.html
+++ b/src/app/mentor-list/mentor-list.component.html
@@ -4,7 +4,7 @@
 
   <ng-template #show_heroes>
       <mat-grid-list cols="3" rowHeight="3:2">
-      <mat-grid-tile colspan=1 rowspan=1 *ngFor="let course of courses">
+      <mat-grid-tile colspan=1 rowspan=1 *ngFor="let course of courses | filter:searchText">
     <mat-card class="course-card mat-elevation-z10">
       <mat-card-header>
         <div mat-card-avatar
@@ -49,18 +49,18 @@
             </mat-grid-list>
       </mat-card-content>
       <mat-card-actions>
-          <mat-grid-list cols="3" rows="1" rowHeight="30px">
+          <mat-grid-list cols="3" rows="1" rowHeight="40px">
               <mat-grid-tile colspan=2 rowspan=1>
                   <div class="text-inside-grid">
                       <span class="label">Mentor:</span>{{ course.mentorName}}
                     </div>
                 </mat-grid-tile>
                 <mat-grid-tile colspan=1 rowspan=1>
-                    <div *ngIf="course.rate > 0" class="course-actions">
-                      <button mat-icon-button color="accent">
-                          <span style="font-size: 20px">{{course.rate}}</span><mat-icon >star</mat-icon>
-                        </button>
-                      </div>
+                     <div *ngIf="course.rate > 0" class="course-actions">
+                            <button mat-icon-button color="accent">
+                                <mat-icon matBadge={{course.rate}} matBadgeColor="warn" matBadgeSize="small">star</mat-icon>
+                              </button>
+                            </div>
                   </mat-grid-tile>
             </mat-grid-list>
       </mat-card-actions>
