fix user component bug

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -75,10 +75,10 @@
         </mat-grid-list>
         </ng-template>
      </mat-tab>
-  <mat-tab label="In Progress" (click)="findInProgressCourse()">
+  <mat-tab label="In Progress">
 
   </mat-tab>
-  <mat-tab label="Completed" (click)="findCompletedCourse()">
+  <mat-tab label="Completed">
      </mat-tab>
 </mat-tab-group>
 </div>
