--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.warn-snackbar {
+  background: orange;
+}
+.success-snackbar {
+  background: #2196F3;
+}
+.error-snackbar {
+  background: #F44336;
+}
